--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
+  background: #e5e5e5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  box-sizing: border-box;
+  width: 22rem;
+  height: 16rem;
+  background: #ffffff;
+  padding: 32px;
+  border-radius: 24px;
+  margin: 40px;
+  box-shadow: 24px 24px 40px rgba(75, 207, 160, 0.08);
+}
+
+.product-card__category {
+  display: inline-block;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+
+.product-card__name {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: -0.02em;
+  margin-top: 8px;
+  margin-bottom:42px;
+}
+
+.product-card__buy-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+.product-card__price {
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.02em;
+}
+
+.product-card__price::before {
+  top: -13px;
+  position: relative;
+  font-size: 30px;
+  line-height: 35px;
+  letter-spacing: -0.02em;
+  content: '$';
+}
+
+.product-card__button {
+  width: 64px;
+  height: 56px;
+  font-size: 16px;
+  line-height: 24px;
+
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  border: 1px solid #e5e5e5;
+  border-radius: 16px;
+  color: #4bcfa0;
+  background: #ffffff;
+}
+
+.product-card__button:hover {
+  background: #4bcfa0;
+  color: #ffffff;
 }
